[gd_scene load_steps=2 format=2]

[ext_resource path="res://material_maker/widgets/tab_container.gd" type="Script" id=1]

[node name="Tabs" type="Panel"]
margin_right = 260.0
margin_bottom = 312.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="Tabs" parent="."]
anchor_right = 1.0
margin_bottom = 24.0
tab_align = 0
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tab_changed" from="Tabs" to="." method="set_current_tab"]
[connection signal="tab_close" from="Tabs" to="." method="close_tab"]
